--- a/front/index.html
+++ b/front/index.html
@@ -29,133 +29,133 @@
 
     
         <section class="product">
-            <img src="image/fodasse.png" alt="Camisa" width="150" height="200">
+            <img src="/image/fodasse.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/monalisa.png" alt="Camisa" width="150" height="200">
+            <img src="/image/monalisa.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/lixeira.png" alt="Camisa" width="150" height="200">
+            <img src="/image/lixeira.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/hello kit.png" alt="Camisa" width="150" height="200">
+            <img src="/image/hello kit.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/mamae.png" alt="Camisa" width="150" height="200">
+            <img src="/image/mamae.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/Maromba.png" alt="Camisa" width="150" height="200">
+            <img src="/image/Maromba.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/morrer.png" alt="Camisa" width="150" height="200">
+            <img src="/image/morrer.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/Músculos preparem-se.png" alt="Camisa" width="150" height="200">
+            <img src="/image/Músculos preparem-se.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/ninguem.png" alt="Camisa" width="150" height="200">
+            <img src="/image/ninguem.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/pena.png" alt="Camisa" width="150" height="200">
+            <img src="/image/pena.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/perna.png" alt="Camisa" width="150" height="200">
+            <img src="/image/perna.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/preucupado.png" alt="Camisa" width="150" height="200">
+            <img src="/image/preucupado.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/informatica fm.png" alt="Camisa" width="150" height="200">
+            <img src="/image/informatica fm (1).png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/informatica.png" alt="Camisa" width="150" height="200">
+            <img src="/image/informatica.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/pedagogia.png" alt="Camisa" width="150" height="200">
+            <img src="/image/pedagogia.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/fm estudante.png" alt="Camisa" width="150" height="200">
+            <img src="/image/fm estudante.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/estudante.png" alt="Camisa" width="150" height="200">
+            <img src="/image/estudante.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/direito.png" alt="Camisa" width="150" height="200">
+            <img src="/image/direito (1).png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
         </section>
         <br>
         <section class="product">
-            <img src="image/Maromba.png" alt="Camisa" width="150" height="200">
+            <img src="/image/Maromba.png" alt="Camisa" width="150" height="200">
             <h2>Camisa</h2>
             <p>R$ 79,99</p>
             <button> COMPRAR </button>
